# ADA

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: claude_logic.md  system_architecure.md
memory/: master.md  shell_allowlist.txt  soul.md  wakeup.md
memory/backups/: master_20260406T002523Z.md.bak
ops/: schedule.md  setup_cron.sh
src/ada/: __init__.py  __main__.py  cli.py  config.py  goal_cli.py  knowledge_embeddings.py  knowledge_search.py  knowledge_urls.py  main.py  memory_io.py  orchestrator.py  prompt.py  query_engine.py  stream_debug.py  stream_types.py  tool_executor.py  transcript_format.py  web_persistence.py
src/ada.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ada/adapters/: __init__.py  gemini_stream.py
src/ada/db/: README.txt  schema.sql
src/ada/dream/: __init__.py  run.py  transcript_compact.py
src/ada/ingest/: __init__.py  (+2 more)
tests/: conftest.py  test_file_sandbox.py  test_gemini_stream.py  test_goal_cli.py  test_ingest_gate.py  test_ingest_rss.py  test_knowledge_schema.py  test_knowledge_search.py  test_memory_io.py  test_orchestrator_knowledge_tools_mock.py  test_orchestrator_mock.py  test_prompt.py  test_query_engine.py  test_tool_executor_file.py  test_tool_executor_goal_recall.py  test_tool_executor_plan.py  test_tool_executor_web.py  test_transcript_compact.py  test_triage_cli.py  test_web_sources.py
tests/fixtures/: sample_rss.xml  schema_before_business_kernel.sql  schema_legacy_before_knowledge.sql  schema_legacy_no_web_sources.sql
tmp/: ada_file_tool_test.txt
(+9 files in other folders)
